2006-05-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-toggle-truncate-lines): Fix type in
	comment.

2006-05-29  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (Added gnus-agent-flush*) to purge agent info.
	(gnus-agent-read-agentview): Fixed handling of end-of-file error.
	(gnus-agent-read-local): All symbols allocated in my-obarray
	(gnus-agent-set-local): Skip invalid entries (min and/or max is nil).
	(gnus-agent-regenerate-group): Check numeric names to see if they are
	messages or groups.
	(gnus-agent-total-fetched-for): Ignore 'dummy.group' (there should be a
	better way of do this...)

	* gnus-cache.el (gnus-agent-total-fetched-for): Ignore
	'dummy.group' (there should be a better way of do this...)

2006-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-save-all-headers): Mention it might be overridden.
	(gnus-saved-headers): Ditto.
	(gnus-default-article-saver): Mention functions may have properties.
	(gnus-article-save): Override gnus-save-all-headers and
	gnus-saved-headers by :headers property which saver function may have.
	(gnus-summary-save-in-file): Add :headers property.
	(gnus-summary-write-to-file): Ditto.

	* gnus-sum.el (gnus-summary-save-article): Bind
	gnus-prompt-before-saving to t when saving many articles in a file;
	always show all headers.

	* dgnushack.el: Autoload toggle-truncate-lines for XEmacs.

2006-05-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* deuglify.el (gnus-outlook-rearrange-article): Add missing citation
	marks.

	* message.el (message-indent-citation): Add optional arguments to allow
	using it outside of message buffers.

	* gnus-art.el (gnus-article-unfold-long-headers): New variable.
	(gnus-article-treat-unfold-headers): Use it.
	(gnus-article-truncate-lines): New variable.
	(gnus-article-mode): Use it.
	(gnus-article-toggle-truncate-lines): New function.

	* gnus-sum.el (gnus-summary-wash-map, gnus-summary-make-menu-bar): Add
	gnus-article-toggle-truncate-lines.
